--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Staff/UpdateStaff.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Staff/UpdateStaff.cshtml
@@ -1,11 +1,12 @@
-@model AddStaffViewModel
+@model UpdateStaffViewModel
 
 @{
-    ViewData["Title"] = "AddStaff";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
+
 }
 
 <form method="post">
+  <input type="hidden" asp-for="StaffID"/>
   <div class="container text-center">
     <div class="row">
       <div class="col input-group mb-3">
@@ -14,13 +15,13 @@
       </div>
       <div class="col input-group mb-3">
         <label class="input-group-text">Personel Soyadı</label>
-        <input type="text" asp-for="LastName" class="form-control" />
+        <input type="text" asp-for="LastName" class="form-control"/>
       </div>
     </div>
     <div class="row">
       <div class="col input-group mb-3">
         <label class="input-group-text">Personel Ünvanı</label>
-        <input type="text" asp-for="StaffTitle" class="form-control" />
+        <input type="text" asp-for="StaffTitle" class="form-control"/>
       </div>
     </div>
     <div class="row">
@@ -30,7 +31,7 @@
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
           </svg>
         </span>
-        <input type="text" asp-for="SocialMedia1" class="form-control"/>
+        <input type="text" asp-for="SocialMedia1" class="form-control" />
       </div>
       <div class="col input-group mb-3">
         <span class="input-group-text">
@@ -39,7 +40,7 @@
           </svg>
         </span>
         <span class="input-group-text">@@</span>
-        <input type="text" asp-for="SocialMedia2" class="form-control"/>
+        <input type="text" asp-for="SocialMedia2" class="form-control" />
       </div>
       <div class="col input-group mb-3">
         <span class="input-group-text">
@@ -48,11 +49,11 @@
           </svg>
         </span>
         <span class="input-group-text">@@</span>
-        <input type="text" asp-for="SocialMedia3" class="form-control"/>
+        <input type="text" asp-for="SocialMedia3" class="form-control" />
       </div>
     </div>
     <br/>
-  <button class="btn btn-outline-primary float-right" href="/Staff/Index">Personel Ekle</button>
+    <button class="btn btn-outline-primary float-right" href="/Staff/Index">Personel Güncelle</button>
   </div>
 </form>
 
