--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using HotelApp.WebUI
 @using HotelApp.WebUI.Models
 @using HotelApp.WebUI.Models.Staff
+@using HotelApp.WebUI.Models.Testimonial
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
