--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Testimonial/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Testimonial/Index.cshtml
@@ -23,10 +23,10 @@
             <td>@item.Name</td>
             <td>@item.Title</td>
             <td>
-                <a class="btn mb-1 btn-rounded btn-outline-danger" href="/Staff/DeleteStaff/@item.TestimonialID">Sil</a>
+                <a class="btn mb-1 btn-rounded btn-outline-danger" href="/Testimonial/DeleteTestimonial/@item.TestimonialID">Sil</a>
             </td>
             <td>
-                <a class="btn mb-1 btn-rounded btn-outline-success" href="/Staff/UpdateStaff/@item.TestimonialID">Güncelle</a>
+                <a class="btn mb-1 btn-rounded btn-outline-success" href="/Testimonial/UpdateTestimonial/@item.TestimonialID">Güncelle</a>
             </td>
             <td>
                 <button href="#" class="btn mb-1 btn-rounded btn-outline-dark">Detaylar</button>
@@ -34,4 +34,4 @@
         </tr>
     }
 </table>
-<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-info">Yeni Personel</a>
+<a href="/Testimonial/AddTestimonial/" class="btn mb-1 btn-rounded btn-info">Yeni Personel</a>
