--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Service/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Service/Index.cshtml
@@ -23,12 +23,12 @@
             <td>@item.Title</td>
             <td>@item.Description</td>
             <td>
-                <a class="btn mb-1 btn-rounded btn-outline-danger" href="/Service/DeleteService/@item.ServiceID">Sil</a>
+                <a class="btn mb-1 btn-rounded btn-danger" href="/Service/DeleteService/@item.ServiceID">Sil</a>
             </td>
             <td>
-                <a class="btn mb-1 btn-rounded btn-outline-success" href="/Service/UpdateService/@item.ServiceID">Güncelle</a>
+                <a class="btn mb-1 btn-rounded btn-success" href="/Service/UpdateService/@item.ServiceID">Güncelle</a>
             </td>
         </tr>
     }
 </table>
-<a href="/Service/AddService/" class="btn mb-1 btn-rounded btn-info">Yeni Hizmet</a>
+<a href="/Service/AddService/" class="btn mb-1 btn-rounded btn-info float-right">Yeni Hizmet</a>
