--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -2,12 +2,18 @@
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
             <li>
-                <a href="widgets.html" aria-expanded="false">
-                    <i class="icon-badge menu-icon">
+                <a href="/Staff/Index" aria-expanded="false">
+                    <i class="fa fa-user">
                     </i
-                    ><span class="nav-text">Widget</span>
+                    ><span class="nav-text">Personeller</span>
                 </a>
             </li>
+            <li>
+                <a href="/Staff/Index" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i
+                    ><span class="nav-text">Referanslar</span>
+                </a>
+                </li>
         </ul>
     </div>
 </div>
