--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Service/UpdateService.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Service/UpdateService.cshtml
@@ -1,18 +1,34 @@
-
+@model UpdateServiceDTO
 
 @{
-    Layout = null;
+    ViewData["Title"] = "AddService";
+    Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<!DOCTYPE html>
+<form method="post">
+  <input type="hidden" asp-for="ServiceID"/>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col input-group mb-3">
+        <label class="input-group-text">Hizmet İkonu</label>
+        <input type="text" asp-for="ServiceIcon" class="form-control" />
+        <span asp-validation-for="ServiceIcon" class="text-danger"></span>
+      </div>
+      <div class="col input-group mb-3">
+        <label class="input-group-text">Hizmet Başlığı</label>
+        <input type="text" asp-for="Title" class="form-control" />
+        <span asp-validation-for="Title" class="text-danger"></span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col input-group mb-3">
+        <label class="input-group-text">Hizmet Açıklaması</label>
+        <textarea asp-for="Description" cols="40" rows="5" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+      </div>
+    </div>
+    <br/>
+  <button class="btn btn-primary float-right" href="/Service/Index">Hizmeti Güncelle</button>
+  </div>
+</form>
 
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
