Register & Login Page

--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using HotelApp.WebUI.Models.Testimonial
 @using HotelApp.WebUI.DTO.ServiceDTO
 @using HotelApp.WebUI.DTO.RegisterDTO
+@using HotelApp.WebUI.DTO.LoginDTO
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
