--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_CarouselPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_CarouselPartial/Default.cshtml
@@ -14,20 +14,20 @@
                   <h6
                     class="section-title text-white text-uppercase mb-3 animated slideInDown"
                   >
-                    Luxury Living
+                    Lüks Yaşam
                   </h6>
                   <h1 class="display-3 text-white mb-4 animated slideInDown">
-                    Discover A Brand Luxurious Hotel
+                    Lüks Bir Hotel Deneyimi Yaşa
                   </h1>
                   <a
                     href=""
                     class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
-                    >Our Rooms</a
+                    >Odalarımız</a
                   >
                   <a
                     href=""
                     class="btn btn-light py-md-3 px-md-5 animated slideInRight"
-                    >Book A Room</a
+                    >Rezervasyon Yap</a
                   >
                 </div>
               </div>
@@ -41,20 +41,20 @@
                   <h6
                     class="section-title text-white text-uppercase mb-3 animated slideInDown"
                   >
-                    Luxury Living
+                    Konforun Zirvesi
                   </h6>
                   <h1 class="display-3 text-white mb-4 animated slideInDown">
-                    Discover A Brand Luxurious Hotel
+                    Rüya Gibi Tatil
                   </h1>
                   <a
                     href=""
                     class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
-                    >Our Rooms</a
+                    >Odalarımız</a
                   >
                   <a
                     href=""
                     class="btn btn-light py-md-3 px-md-5 animated slideInRight"
-                    >Book A Room</a
+                    >Rezervasyon Yap</a
                   >
                 </div>
               </div>
@@ -67,7 +67,7 @@
             data-bs-slide="prev"
           >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Önceki</span>
           </button>
           <button
             class="carousel-control-next"
@@ -76,7 +76,7 @@
             data-bs-slide="next"
           >
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Sonraki</span>
           </button>
         </div>
       </div>
