--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -2,10 +2,10 @@
         <div class="row gx-0">
           <div class="col-lg-3 bg-dark d-none d-lg-block">
             <a
-              href="/hotel-html-template/index.html"
+              href="/Default/Index/"
               class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center"
             >
-              <h1 class="m-0 text-primary text-uppercase">Hotelier</h1>
+              <h1 class="m-0 text-primary text-uppercase">GoldFish</h1>
             </a>
           </div>
           <div class="col-lg-9">
@@ -13,7 +13,7 @@
               <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-2 me-4">
                   <i class="fa fa-envelope text-primary me-2"></i>
-                  <p class="mb-0">info@example.com</p>
+                  <p class="mb-0">info@goldfish.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-2">
                   <i class="fa fa-phone-alt text-primary me-2"></i>
@@ -31,8 +31,8 @@
               </div>
             </div>
             <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
-              <a href="/hotel-html-template/index.html" class="navbar-brand d-block d-lg-none">
-                <h1 class="m-0 text-primary text-uppercase">Hotelier</h1>
+              <a href="/default/index/" class="navbar-brand d-block d-lg-none">
+                <h1 class="m-0 text-primary text-uppercase">GoldFish</h1>
               </a>
               <button
                 type="button"
@@ -47,32 +47,27 @@
                 id="navbarCollapse"
               >
                 <div class="navbar-nav mr-auto py-0">
-                  <a href="/hotel-html-template/index.html" class="nav-item nav-link active">Home</a>
-                  <a href="/hotel-html-template/about.html" class="nav-item nav-link">About</a>
-                  <a href="/hotel-html-template/service.html" class="nav-item nav-link">Services</a>
-                  <a href="/hotel-html-template/room.html" class="nav-item nav-link">Rooms</a>
+                  <a href="/hotel-html-template/index.html" class="nav-item nav-link active">Ana Sayfa</a>
+                  <a href="/hotel-html-template/about.html" class="nav-item nav-link">Hakkımızda</a>
+                  <a href="/hotel-html-template/service.html" class="nav-item nav-link">Servisler</a>
+                  <a href="/hotel-html-template/room.html" class="nav-item nav-link">Odalar</a>
                   <div class="nav-item dropdown">
                     <a
                       href="#"
                       class="nav-link dropdown-toggle"
                       data-bs-toggle="dropdown"
-                      >Pages</a
+                      >Sayfalar</a
                     >
                     <div class="dropdown-menu rounded-0 m-0">
-                      <a href="/hotel-html-template/booking.html" class="dropdown-item">Booking</a>
-                      <a href="/hotel-html-template/team.html" class="dropdown-item">Our Team</a>
+                      <a href="/hotel-html-template/booking.html" class="dropdown-item">Rezervasyon</a>
+                      <a href="/hotel-html-template/team.html" class="dropdown-item">Ekibimiz</a>
                       <a href="/hotel-html-template/testimonial.html" class="dropdown-item"
-                        >Testimonial</a
+                        >Yorumlar</a
                       >
                     </div>
                   </div>
-                  <a href="/hotel-html-template/contact.html" class="nav-item nav-link">Contact</a>
+                  <a href="/hotel-html-template/contact.html" class="nav-item nav-link">İletişim</a>
                 </div>
-                <a
-                  href="https://htmlcodex.com/hotel-html-template-pro"
-                  class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block"
-                  >Premium Version<i class="fa fa-arrow-right ms-3"></i
-                ></a>
               </div>
             </nav>
           </div>
