--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using HotelApp.WebUI.DTO.ServiceDTO
 @using HotelApp.WebUI.DTO.RegisterDTO
 @using HotelApp.WebUI.DTO.LoginDTO
+@using HotelApp.WebUI.DTO.AboutDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
