--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_VideoPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_VideoPartial/Default.cshtml
@@ -5,7 +5,7 @@
         <h6
           class="section-title text-start text-white text-uppercase mb-3"
         >
-          Luxury Living
+          Lüks Yaşam
         </h6>
         <h1 class="text-white mb-4">Discover A Brand Luxurious Hotel</h1>
         <p class="text-white mb-4">
@@ -25,7 +25,7 @@
           type="button"
           class="btn-play"
           data-bs-toggle="modal"
-          data-src="https://www.youtube.com/embed/DWRcNpR6Kdc"
+          data-src="https://www.youtube.com/embed/H1CIBqDeWQ0?si=U8SCwvVz7Z9EgdOl&amp;controls=0"
           data-bs-target="#videoModal"
         >
           <span></span>
@@ -58,11 +58,11 @@
         <div class="ratio ratio-16x9">
           <iframe
             class="embed-responsive-item"
-            src=""
+            src="https://www.youtube.com/embed/H1CIBqDeWQ0?si=U8SCwvVz7Z9EgdOl&amp;controls=0"
             id="video"
             allowfullscreen
             allowscriptaccess="always"
-            allow="autoplay"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           ></iframe>
         </div>
       </div>
