--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using HotelApp.WebUI.DTO.RegisterDTO
 @using HotelApp.WebUI.DTO.LoginDTO
 @using HotelApp.WebUI.DTO.AboutDTO
+@using HotelApp.WebUI.DTO.RoomDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
