--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/Index.cshtml
@@ -47,7 +47,7 @@
 <!-- Team End -->
 
 <!-- Newsletter Start -->
-@await Component.InvokeAsync("_NewsletterPartial")
+@await Html.PartialAsync("_NewsletterPartial.cshtml")
 <!-- Newsletter Start -->
 
 <!-- Footer Start -->
