--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_VideoPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_VideoPartial/Default.cshtml
@@ -7,7 +7,7 @@
         >
           Lüks Yaşam
         </h6>
-        <h1 class="text-white mb-4">Hotelimizi Daha Yakıdnan Tanıt</h1>
+        <h1 class="text-white mb-4">Otelimizi daha yakından tanıyın</h1>
         <p class="text-white mb-4">
          Sizin için hazırladığımız otelimizin videosu yayında. Daha yakından tanımak için videomuzu izleyebilirsiniz.Ayrıca otelimizi ziyaret etmek isterseniz rezervasyon yapabilirsiniz.Peki ya siz hala neyi bekliyorsunuz?
         </p>
