--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -11,5 +11,6 @@
 @using HotelApp.WebUI.DTO.RoomDTO
 @using HotelApp.WebUI.DTO.TestimonialDTO
 @using HotelApp.WebUI.DTO.StaffDTO
+@using HotelApp.WebUI.DTO.NewsletterDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
