--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
@@ -7,34 +7,25 @@
       <div class="col-md-6 col-lg-4">
         <div class="bg-primary rounded p-4">
           <a href="/hotel-html-template/index.html"
-          ><h1 class="text-white text-uppercase mb-3">Hotelier</h1></a
+          ><h1 class="text-white text-uppercase">Hotelier</h1></a
           >
-          <p class="text-white mb-0">
-            Download
-            <a
-              class="text-dark fw-medium"
-              href="https://htmlcodex.com/hotel-html-template-pro"
-            >Hotelier – Premium Version</a
-            >, build a professional website for your hotel business and
-            grab the attention of new visitors upon your site’s launch.
-          </p>
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
         <h6
           class="section-title text-start text-primary text-uppercase mb-4"
         >
-          Contact
+          İletişim
         </h6>
         <p class="mb-2">
-          <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York,
-          USA
+          <i class="fa fa-map-marker-alt me-3"></i>1923. Sk, Alaçatı/Çeşme/İzmir
+          Türkiye
         </p>
         <p class="mb-2">
-          <i class="fa fa-phone-alt me-3"></i>+012 345 67890
+          <i class="fa fa-phone-alt me-3"></i>+012 345 6789
         </p>
         <p class="mb-2">
-          <i class="fa fa-envelope me-3"></i>info@example.com
+          <i class="fa fa-envelope me-3"></i>info@goldfish.com
         </p>
         <div class="d-flex pt-2">
           <a class="btn btn-outline-light btn-social" href=""
@@ -57,25 +48,25 @@
             <h6
               class="section-title text-start text-primary text-uppercase mb-4"
             >
-              Company
+              Şirket
             </h6>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Privacy Policy</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <a class="btn btn-link" href="">Biz Kimiz</a>
+            <a class="btn btn-link" href="">İletişime Geç</a>
+            <a class="btn btn-link" href="">Gizlilik Politikası</a>
+            <a class="btn btn-link" href="">Kullanım Koşulları</a>
+            <a class="btn btn-link" href="">Destek</a>
           </div>
           <div class="col-md-6">
             <h6
               class="section-title text-start text-primary text-uppercase mb-4"
             >
-              Services
+              Servisler
             </h6>
-            <a class="btn btn-link" href="">Food & Restaurant</a>
-            <a class="btn btn-link" href="">Spa & Fitness</a>
-            <a class="btn btn-link" href="">Sports & Gaming</a>
-            <a class="btn btn-link" href="">Event & Party</a>
-            <a class="btn btn-link" href="">GYM & Yoga</a>
+            <a class="btn btn-link" href="">Odalar & Hotel</a>
+            <a class="btn btn-link" href="">Yemek & İçecek</a>
+            <a class="btn btn-link" href="">Spa & Hamam</a>
+            <a class="btn btn-link" href="">Etkinlik & Parti</a>
+            <a class="btn btn-link" href="">GYM & Fitness</a>
           </div>
         </div>
       </div>
@@ -85,21 +76,21 @@
     <div class="copyright">
       <div class="row">
         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-          &copy; <a class="border-bottom" href="#">Your Site Name</a>, All
-          Right Reserved.
+          &copy; <a class="border-bottom" href="#">Goldfish</a>, Bütün Hakları
+          Saklıdır.
 
           <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
           Designed By
-          <a class="border-bottom" href="https://htmlcodex.com"
-          >HTML Codex</a
+          <a class="border-bottom" href="https://salihcancakar.dev"
+          >SCC</a
           >
         </div>
         <div class="col-md-6 text-center text-md-end">
           <div class="footer-menu">
-            <a href="">Home</a>
-            <a href="">Cookies</a>
-            <a href="">Help</a>
-            <a href="">FQAs</a>
+            <a href="">Anasayfa</a>
+            <a href="">Çerezler</a>
+            <a href="">Yardım</a>
+            <a href="">SSS</a>
           </div>
         </div>
       </div>
