--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Booking/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Booking/Index.cshtml
@@ -26,29 +26,9 @@
 @await Component.InvokeAsync("_BookingPartial")
 <!-- Booking End -->
 
-<!-- About Start -->
-@await Component.InvokeAsync("_AboutPartial")
-<!-- About End -->
-
-<!-- Room Start -->
-@await Component.InvokeAsync("_RoomPartial")
-<!-- Room End -->
-
-<!-- Video Start -->
-@await Component.InvokeAsync("_VideoPartial")
-<!-- Video Start -->
-
-<!-- Service Start -->
-@await Component.InvokeAsync("_ServicePartial")
-<!-- Service End -->
-
-<!-- Testimonial Start -->
-@await Component.InvokeAsync("_TestimonialPartial")
-<!-- Testimonial End -->
-
-<!-- Team Start -->
-@await Component.InvokeAsync("_TeamPartial")
-<!-- Team End -->
+<!-- Booking Main Start -->
+@await Component.InvokeAsync("_BookingMainPartial")
+<!-- Booking Main End -->
 
 <!-- Newsletter Start -->
 @* @await Html.PartialAsync("_NewsletterPartial.cshtml") *@
