--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using HotelApp.WebUI.DTO.TestimonialDTO
 @using HotelApp.WebUI.DTO.StaffDTO
 @using HotelApp.WebUI.DTO.NewsletterDTO
+@using HotelApp.WebUI.DTO.BookingDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
