--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -9,14 +9,21 @@
                 </a>
             </li>
             <li>
-                <a href="/Staff/Index" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i
+                <a href="/AdminBooking/Index" aria-expanded="false">
+                    <i class="fa fa-calendar-plus-o">
+                    </i
+                    ><span class="nav-text">Rezervasyonlar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Testimonial/Index" aria-expanded="false">
+                    <i class="fa fa-quote-right"></i
                     ><span class="nav-text">Referanslar</span>
                 </a>
             </li>
             <li>
                 <a href="/Service/Index" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i
+                    <i class="fa fa-book"></i
                     ><span class="nav-text">Hizmetler</span>
                 </a>
             </li>
