--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/_NewsletterPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/_NewsletterPartial.cshtml
@@ -13,7 +13,7 @@
                         <div class="position-relative mx-auto" style="max-width: 400px">
                             <input
                                 class="form-control w-100 py-3 ps-4 pe-5"
-                                type="text"
+                                type="email"
                                 placeholder="E-posta adresinizi giriniz"
                                 asp-for="Mail"
                             />
