--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_BookingMainPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_BookingMainPartial/Default.cshtml
@@ -1,23 +1,23 @@
 <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Room Booking</h6>
-                    <h1 class="mb-5">Book A <span class="text-primary text-uppercase">Luxury Room</span></h1>
+                    <h6 class="section-title text-center text-primary text-uppercase">Rezervasyon</h6>
+                    <h1 class="mb-5">Sizi Bekleyen<span class="text-primary text-uppercase">Lüks Odalar</span></h1>
                 </div>
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="row g-3">
                             <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="img/about-1.jpg" style="margin-top: 25%;">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="/hotel-html-template/img/about-1.jpg" style="margin-top: 25%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="/hotel-html-template/img/about-2.jpg">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                                <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="/hotel-html-template/img/about-3.jpg">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s" src="/hotel-html-template/img/about-4.jpg">
                             </div>
                         </div>
                     </div>
@@ -34,55 +34,55 @@
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
+                                            <label for="email">Mail Adresiniz</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating date" id="date3" data-target-input="nearest">
                                             <input type="text" class="form-control datetimepicker-input" id="checkin" placeholder="Check In" data-target="#date3" data-toggle="datetimepicker" />
-                                            <label for="checkin">Check In</label>
+                                            <label for="checkin">Giriş Tarihiniz</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating date" id="date4" data-target-input="nearest">
                                             <input type="text" class="form-control datetimepicker-input" id="checkout" placeholder="Check Out" data-target="#date4" data-toggle="datetimepicker" />
-                                            <label for="checkout">Check Out</label>
+                                            <label for="checkout">Çıkış Tarihiniz</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <select class="form-select" id="select1">
-                                              <option value="1">Adult 1</option>
-                                              <option value="2">Adult 2</option>
-                                              <option value="3">Adult 3</option>
+                                              <option value="1">1 Yetişkin</option>
+                                              <option value="2">2 Yetişkin</option>
+                                              <option value="3">3 Yetişkin</option>
                                             </select>
-                                            <label for="select1">Select Adult</label>
+                                            <label for="select1">Yetişkin Sayısı Belirtiniz</label>
                                           </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <select class="form-select" id="select2">
-                                              <option value="1">Child 1</option>
-                                              <option value="2">Child 2</option>
-                                              <option value="3">Child 3</option>
+                                              <option value="1">1 Çocuk</option>
+                                              <option value="2">2 Çocuk</option>
+                                              <option value="3">3 Çocuk</option>
                                             </select>
-                                            <label for="select2">Select Child</label>
+                                            <label for="select2">Çocuk Sayısı Belirtiniz</label>
                                           </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <select class="form-select" id="select3">
-                                              <option value="1">Room 1</option>
-                                              <option value="2">Room 2</option>
-                                              <option value="3">Room 3</option>
+                                              <option value="1">Oda 1</option>
+                                              <option value="2">Oda 2</option>
+                                              <option value="3">Oda 3</option>
                                             </select>
-                                            <label for="select3">Select A Room</label>
+                                            <label for="select3">Oda Tipi Seçiniz</label>
                                           </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="form-floating">
                                             <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                            <label for="message">Special Request</label>
+                                            <label for="message">Özel İstekleriniz Belirtiniz</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
