--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Booking/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Booking/Index.cshtml
@@ -6,7 +6,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-@await Component.InvokeAsync("_HeadPartial");
+@await Component.InvokeAsync("_HeadPartial")
 
 <body>
 <div class="container-xxl bg-white p-0">
@@ -23,7 +23,7 @@
 <!-- Carousel End -->
 
 <!-- Booking Start -->
-@await Component.InvokeAsync("_BookingPartial")
+@* @await Component.InvokeAsync("_BookingPartial") *@
 <!-- Booking End -->
 
 <!-- Booking Main Start -->
