--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_CarouselPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_CarouselPartial/Default.cshtml
@@ -20,12 +20,12 @@
                     Lüks Bir Hotel Deneyimi Yaşa
                   </h1>
                   <a
-                    href=""
+                    href="/room/index/"
                     class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
                     >Odalarımız</a
                   >
                   <a
-                    href=""
+                    href="/booking/index/"
                     class="btn btn-light py-md-3 px-md-5 animated slideInRight"
                     >Rezervasyon Yap</a
                   >
@@ -47,12 +47,12 @@
                     Rüya Gibi Tatil
                   </h1>
                   <a
-                    href=""
+                    href="/room/index/"
                     class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
                     >Odalarımız</a
                   >
                   <a
-                    href=""
+                    href="/booking/index"
                     class="btn btn-light py-md-3 px-md-5 animated slideInRight"
                     >Rezervasyon Yap</a
                   >
