--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Default/Index.cshtml
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-@await Component.InvokeAsync("_HeadPartial");
+@await Component.InvokeAsync("_HeadPartial")
 
 <body>
 <div class="container-xxl bg-white p-0">
@@ -19,7 +19,7 @@
 <!-- Carousel End -->
 
 <!-- Booking Start -->
-@await Component.InvokeAsync("_BookingPartial")
+@* @await Component.InvokeAsync("_BookingPartial") *@
 <!-- Booking End -->
 
 <!-- About Start -->
