--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_AboutPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_AboutPartial/Default.cshtml
@@ -45,7 +45,7 @@
               </div>
             </div>
           </div>
-          <a class="btn btn-primary py-3 px-5 mt-2" href="">Daha Fazla..</a>
+          <a class="btn btn-primary py-3 px-5 mt-2" href="/booking/index/">Daha Fazla..</a>
         </div>
         <div class="col-lg-6">
           <div class="row g-3">
