--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -16,6 +16,12 @@
                 </a>
             </li>
             <li>
+                <a href="/AdminAbout/Index" aria-expanded="false">
+                    <i class="fa fa-info"></i
+                    ><span class="nav-text">Hakkımızda</span>
+                </a>
+            </li>
+            <li>
                 <a href="/Testimonial/Index" aria-expanded="false">
                     <i class="fa fa-quote-right"></i
                     ><span class="nav-text">Referanslar</span>
@@ -24,6 +30,12 @@
             <li>
                 <a href="/Service/Index" aria-expanded="false">
                     <i class="fa fa-book"></i
+                    ><span class="nav-text">Hizmetler</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminRoom/Index" aria-expanded="false">
+                    <i class="fa fa-home"></i
                     ><span class="nav-text">Hizmetler</span>
                 </a>
             </li>
