--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_AboutPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_AboutPartial/Default.cshtml
@@ -7,10 +7,10 @@
       <div class="row g-5 align-items-center">
         <div class="col-lg-6">
           <h6 class="section-title text-start text-primary text-uppercase">
-            Hakkımızda
+            @item.Title1
           </h6>
           <h1 class="mb-4">
-            <span class="text-primary text-uppercase">GoldFish</span>
+            <span class="text-primary text-uppercase">@item.Title2</span>
             'e Hoş Geldiniz.
           </h1>
           <p class="mb-4">
