--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Contact/AddContact.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Contact/AddContact.cshtml
@@ -25,9 +25,9 @@
                     </div>
                     <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
                         <iframe class="position-relative rounded w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                            frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
-                            tabindex="0"></iframe>
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2579.4280327582483!2d13.367285276514508!3d49.721568871462225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470aee1466f490e9%3A0x4412b8b74fba0e62!2sGOLDEN%20FISH%20Hotel%20Apartments!5e0!3m2!1str!2str!4v1699050588107!5m2!1str!2str"
+                                frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
+                                tabindex="0"></iframe>
                     </div>
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
