--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -51,7 +51,7 @@
                   <a href="/booking/index" class="nav-item nav-link">Rezervasyon Yap</a>
                   <a href="/contact/index" class="nav-item nav-link">İLETİŞİM</a>
                   <a href="/help/index" class="nav-item nav-link">Destek</a>
-                  <a href="/help/index" class="nav-item nav-link">GİRİŞ YAP</a>
+                  <a href="/login/index" class="nav-item nav-link">GİRİŞ YAP</a>
                 </div>
               </div>
             </nav>
