Admin Room Refact

--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminAbout/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminAbout/Index.cshtml
@@ -36,7 +36,9 @@
                     <td>
                            <a class="btn mb-1 btn-rounded btn-success" href="/AdminAbout/UpdateAbout/@item.AboutID">Güncelle</a>
                     </td>
-                    <td><button class="btn mb-1 btn-rounded btn-outline-danger">Sil</button></td>
+                    <td>
+                           <a class="btn mb-1 btn-rounded btn-danger" href="/AdminAbout/DeleteAbout/@item.AboutID">Sil</a>
+                    </td>
                 </tr>
             }
             </tbody>
