--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -36,7 +36,7 @@
             <li>
                 <a href="/AdminRoom/Index" aria-expanded="false">
                     <i class="fa fa-home"></i
-                    ><span class="nav-text">Hizmetler</span>
+                    ><span class="nav-text">Odalar</span>
                 </a>
             </li>
         </ul>
