Admin Guest Refact

--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -14,5 +14,6 @@
 @using HotelApp.WebUI.DTO.NewsletterDTO
 @using HotelApp.WebUI.DTO.BookingDTO
 @using HotelApp.WebUI.DTO.ContactDTO
+@using HotelApp.WebUI.DTO.GuestDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
