--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -39,6 +39,18 @@
                     ><span class="nav-text">Odalar</span>
                 </a>
             </li>
+            <li>
+                <a href="/Guest/Index" aria-expanded="false">
+                    <i class="fa fa-user"></i
+                    ><span class="nav-text">Misafirler</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminContact/Inbox" aria-expanded="false">
+                    <i class="fa fa-address-book"></i
+                    ><span class="nav-text">Mesajlar</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
