--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -15,5 +15,6 @@
 @using HotelApp.WebUI.DTO.BookingDTO
 @using HotelApp.WebUI.DTO.ContactDTO
 @using HotelApp.WebUI.DTO.GuestDTO
+@using HotelApp.WebUI.DTO.SendMessageDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
