--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminContact/Sendbox.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminContact/Sendbox.cshtml
@@ -1,56 +1,55 @@
-@model List<ResultSendMessageDTO>
+@model List<SendboxContactDTO>
 
 @{
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-@* *@
-@* <div class="email-left-box"> *@
-@*   <a href="/AdminContact/AddContact/Index" class="btn btn-primary btn-block" *@
-@*   >Yeni Mesaj Oluştur</a *@
-@*   > *@
-@*   <div class="mail-list mt-4"> *@
-@*     <a *@
-@*       href="email-inbox.html" *@
-@*       class="list-group-item border-0 text-primary p-r-0" *@
-@*     ><i class="fa fa-inbox font-18 align-middle mr-2"></i> <b>Gelen Kutusu</b> *@
-@*       <span class="badge badge-primary badge-sm float-right m-t-5" *@
-@*       >198</span *@
-@*       > *@
-@*     </a> *@
-@*     <a href="#" class="list-group-item border-0 p-r-0" *@
-@*     ><i class="fa fa-paper-plane font-18 align-middle mr-2"></i>Giden Kutusu</a *@
-@*     > *@
-@*     <a href="#" class="list-group-item border-0 p-r-0" *@
-@*     ><i class="fa fa-star-o font-18 align-middle mr-2"></i>Önemli *@
-@*       <span class="badge badge-danger badge-sm float-right m-t-5" *@
-@*       >47</span *@
-@*       > *@
-@*     </a> *@
-@*     <a href="#" class="list-group-item border-0 p-r-0" *@
-@*     ><i class="mdi mdi-file-document-box font-18 align-middle mr-2"></i *@
-@*     >Taslaklar</a *@
-@*     ><a href="#" class="list-group-item border-0 p-r-0" *@
-@*      ><i class="fa fa-trash font-18 align-middle mr-2"></i>Çöp Kutusu</a *@
-@*     > *@
-@*   </div> *@
-@*   <h5 class="mt-5 m-b-10">Kategoriler</h5> *@
-@*   <div class="list-group mail-list"> *@
-@*     <a href="#" class="list-group-item border-0" *@
-@*     ><span class="fa fa-briefcase f-s-14 mr-2"></span>Şikayet</a *@
-@*     > *@
-@*     <a href="#" class="list-group-item border-0" *@
-@*     ><span class="fa fa-sellsy f-s-14 mr-2"></span>Teşekkür</a *@
-@*     > *@
-@*     <a href="#" class="list-group-item border-0" *@
-@*     ><span class="fa fa-ticket f-s-14 mr-2"></span>Talep</a *@
-@*     > *@
-@*     <a href="#" class="list-group-item border-0" *@
-@*     ><span class="fa fa-tags f-s-14 mr-2"></span>Kariyer</a *@
-@*     > *@
-@*   </div> *@
-@* </div> *@
-
+<div class="email-left-box">
+  <a href="/AdminContact/AddSendMessage/Index" class="btn btn-primary btn-block"
+  >Yeni Mesaj Oluştur</a
+  >
+  <div class="mail-list mt-4">
+    <a
+      href="/AdminContact/Inbox"
+      class="list-group-item border-0 text-primary p-r-0"
+    ><i class="fa fa-inbox font-18 align-middle mr-2"></i> <b>Gelen Kutusu</b>
+      <span class="badge badge-primary badge-sm float-right m-t-5"
+      >@Model.Count</span
+      >
+    </a>
+    <a href="/AdminContact/Sendbox" class="list-group-item border-0 p-r-0"
+    ><i class="fa fa-paper-plane font-18 align-middle mr-2"></i>Giden Kutusu</a
+    >
+    <a href="#" class="list-group-item border-0 p-r-0"
+    ><i class="fa fa-star-o font-18 align-middle mr-2"></i>Önemli
+      <span class="badge badge-danger badge-sm float-right m-t-5"
+      >47</span
+      >
+    </a>
+    <a href="#" class="list-group-item border-0 p-r-0"
+    ><i class="mdi mdi-file-document-box font-18 align-middle mr-2"></i
+    >Taslaklar</a
+    ><a href="#" class="list-group-item border-0 p-r-0"
+     ><i class="fa fa-trash font-18 align-middle mr-2"></i>Çöp Kutusu</a
+    >
+  </div>
+  <h5 class="mt-5 m-b-10">Kategoriler</h5>
+  <div class="list-group mail-list">
+    <a href="#" class="list-group-item border-0"
+    ><span class="fa fa-briefcase f-s-14 mr-2"></span>Şikayet</a
+    >
+    <a href="#" class="list-group-item border-0"
+    ><span class="fa fa-sellsy f-s-14 mr-2"></span>Teşekkür</a
+    >
+    <a href="#" class="list-group-item border-0"
+    ><span class="fa fa-ticket f-s-14 mr-2"></span>Talep</a
+    >
+    <a href="#" class="list-group-item border-0"
+    ><span class="fa fa-tags f-s-14 mr-2"></span>Kariyer</a
+    >
+  </div>
+</div>
+<div class="email-right-box">
   <div role="toolbar" class="toolbar">
     <div class="btn-group">
       <button
@@ -59,7 +58,7 @@
         class="btn btn-dark dropdown-toggle"
         type="button"
       >
-        Gönderilen Mesajlar <span class="caret m-l-5"></span>
+        Gelen Mesajlar <span class="caret m-l-5"></span>
       </button>
     </div>
   </div>
@@ -67,7 +66,7 @@
     @foreach (var item in Model)
     {
       <div class="message">
-        <a href="/AdminContact/MessageDetails/">
+        <a href="/AdminContact/MessageDetailsBySendbox/@item.SendMessageID">
           <div class="col-mail col-mail-1">
             <div class="email-checkbox">
               <input type="checkbox" id="chk2"/>
@@ -77,14 +76,14 @@
           </div>
           <div class="col-mail col-mail-2">
             <div class="subject">
-              <b>Konu :@item.Title</b>
               @item.Content
-              Alıcı : @item.ReceiverName
             </div>
-            <div class="date">@item.Date.ToLongDateString()</div>
+            <div class="date">@item.Date.ToShortDateString()</div>
           </div>
         </a>
       </div>
     }
   </div>
+</div>
+
 
