--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/_AdminLayout.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/_AdminLayout.cshtml
@@ -15,7 +15,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <p>@RenderBody()</p>
+                            @RenderBody()
                         </div>
                     </div>
                 </div>
