--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -51,6 +51,18 @@
                     ><span class="nav-text">Mesajlar</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminMail/Index" aria-expanded="false">
+                    <i class="fa fa-envelope"></i
+                    ><span class="nav-text">Mesajlar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminImageFile/Index" aria-expanded="false">
+                    <i class="fa fa-image"></i
+                    ><span class="nav-text">Resim İşlemleri</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
