--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
@@ -7,7 +7,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="bg-primary rounded p-4">
           <a href="/hotel-html-template/index.html"
-          ><h1 class="text-white text-uppercase">Hotelier</h1></a
+          ><h1 class="text-white text-uppercase">GoldFish</h1></a
           >
         </div>
       </div>
