--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -16,5 +16,6 @@
 @using HotelApp.WebUI.DTO.ContactDTO
 @using HotelApp.WebUI.DTO.GuestDTO
 @using HotelApp.WebUI.DTO.SendMessageDTO
+@using HotelApp.WebUI.Models.Mail
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
