--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Login/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Login/Index.cshtml
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>
-      Hotel App Login
+      Goldfish Login
     </title>
     <!-- Favicon icon -->
     <link
@@ -54,7 +54,7 @@
             <div class="form-input-content">
               <div class="card login-form mb-0">
                 <div class="card-body pt-5">
-                  <a class="text-center" href="/Login/Index"> <h4>Hotel App</h4></a>
+                  <a class="text-center" href="/Login/Index"> <h4>Goldfish</h4></a>
 
                   <form class="mt-5 mb-5 login-input" method="post">
                     <div class="form-group">
