--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Register/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Register/Index.cshtml
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>
-      HotelApp Login
+      Goldfish Login
     </title>
     <!-- Favicon icon -->
     <link
@@ -85,7 +85,7 @@
                       <input
                         type="text"
                         class="form-control"
-                        placeholder="Ad"
+                        placeholder="Kullanıcı Adı"
                         required
                         asp-for="Username"
                       />
@@ -126,9 +126,8 @@
                     </button>
                   </form>
                   <p class="mt-5 login-form__footer">
-                    Have account
+                    Hesabın Var Mı?
                     <a href="/Login/Index" class="text-primary">Oturum Aç</a>
-                    now
                   </p>
                 </div>
               </div>
