Admin Users Page

--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -54,13 +54,25 @@
             <li>
                 <a href="/AdminMail/Index" aria-expanded="false">
                     <i class="fa fa-envelope"></i
-                    ><span class="nav-text">Mesajlar</span>
+                    ><span class="nav-text">Mail İşlemleri</span>
                 </a>
             </li>
             <li>
                 <a href="/AdminImageFile/Index" aria-expanded="false">
                     <i class="fa fa-image"></i
                     ><span class="nav-text">Resim İşlemleri</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminFileProcess/Index" aria-expanded="false">
+                    <i class="fa fa-file"></i
+                    ><span class="nav-text">Dosya İşlemleri</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminUsers/Index" aria-expanded="false">
+                    <i class="fa fa-user-friends"></i
+                    ><span class="nav-text">Kullanıcılar</span>
                 </a>
             </li>
         </ul>
