Admin Worklocation page

--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -75,6 +75,24 @@
                     ><span class="nav-text">Kullanıcılar</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminWorkLocation/Index" aria-expanded="false">
+                    <i class="fa fa-location-arrow"></i
+                    ><span class="nav-text">Otel Lokasyonları</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminRoles/Index" aria-expanded="false">
+                    <i class="fa fa-lock"></i
+                    ><span class="nav-text">Roller</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminLogout/Index" aria-expanded="false">
+                    <i class="fa fa-cross"></i
+                    ><span class="nav-text">Çıkış yap</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
