--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -17,5 +17,6 @@
 @using HotelApp.WebUI.DTO.GuestDTO
 @using HotelApp.WebUI.DTO.SendMessageDTO
 @using HotelApp.WebUI.Models.Mail
+@using HotelApp.WebUI.DTO.WorkLocationDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
