--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/Register/Index.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/Register/Index.cshtml
@@ -58,7 +58,7 @@
             <div class="form-input-content">
               <div class="card login-form mb-0">
                 <div class="card-body pt-5">
-                  <a class="text-center" href=""> <h4>Hotel Giriş Panel</h4></a>
+                  <a class="text-center" href=""> <h4>Goldfish Kayıt</h4></a>
 
                   <form class="mt-5 mb-5 login-input" method="post">
                     <div class="form-group">
@@ -107,6 +107,7 @@
                         class="form-control"
                         placeholder="Şifre"
                         required
+                        minlength="6"
                         asp-for="Password"
                       />
                       <span asp-validation-for="Password" class="text-danger"></span>
@@ -117,6 +118,7 @@
                         class="form-control"
                         placeholder="Şifre Tekrarı"
                         required
+                        minlength="6"
                         asp-for="ConfirmPassword"
                       />
                       <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
