--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/NavheaderPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/NavheaderPartial.cshtml
@@ -1,6 +1,6 @@
 <div class="nav-header">
     <div class="brand-logo">
-        <a href="index.html">
+        <a href="/AdminDashboard/index">
             <b class="logo-abbr">
                 <img src="/adminTheme/images/logo.png" alt="">
             </b>
