--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -82,7 +82,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminRoles/Index" aria-expanded="false">
+                <a href="/Role/Index" aria-expanded="false">
                     <i class="fa fa-lock"></i
                     ><span class="nav-text">Roller</span>
                 </a>
