--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/_ViewImports.cshtml
@@ -18,5 +18,6 @@
 @using HotelApp.WebUI.DTO.SendMessageDTO
 @using HotelApp.WebUI.Models.Mail
 @using HotelApp.WebUI.DTO.WorkLocationDTO
+@using HotelApp.WebUI.DTO.FollowersDTO
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
