--- a/HotelSolution/Frontend/HotelApp.WebUI/wwwroot/adminTheme/css/style.css
+++ b/HotelSolution/Frontend/HotelApp.WebUI/wwwroot/adminTheme/css/style.css
@@ -16870,6 +16870,14 @@ table.dataTable thead .sorting::after {
     background-color: #db4439;
 }
 
+.social-graph-wrapper.widget-instagram {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+        background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
+
 .social-graph-wrapper .s-icon {
     font-size: 2.1875rem;
     position: relative;
